// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`paintScene — whole-scene golden (ADR-0078 S1) > emits a stable ordered call log for the flag-off scene 1`] = `
[
  "setTransform([1,0,0,1,0,0])",
  "clearRect([0,0,800,400])",
  "strokeStyle=#111",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([0.5,0])",
  "lineTo([0.5,400])",
  "moveTo([12.5,0])",
  "lineTo([12.5,400])",
  "moveTo([24.5,0])",
  "lineTo([24.5,400])",
  "moveTo([36.5,0])",
  "lineTo([36.5,400])",
  "moveTo([48.5,0])",
  "lineTo([48.5,400])",
  "moveTo([60.5,0])",
  "lineTo([60.5,400])",
  "moveTo([72.5,0])",
  "lineTo([72.5,400])",
  "moveTo([84.5,0])",
  "lineTo([84.5,400])",
  "moveTo([96.5,0])",
  "lineTo([96.5,400])",
  "moveTo([108.5,0])",
  "lineTo([108.5,400])",
  "moveTo([120.5,0])",
  "lineTo([120.5,400])",
  "moveTo([132.5,0])",
  "lineTo([132.5,400])",
  "moveTo([144.5,0])",
  "lineTo([144.5,400])",
  "moveTo([156.5,0])",
  "lineTo([156.5,400])",
  "moveTo([168.5,0])",
  "lineTo([168.5,400])",
  "moveTo([180.5,0])",
  "lineTo([180.5,400])",
  "moveTo([192.5,0])",
  "lineTo([192.5,400])",
  "moveTo([204.5,0])",
  "lineTo([204.5,400])",
  "moveTo([216.5,0])",
  "lineTo([216.5,400])",
  "moveTo([228.5,0])",
  "lineTo([228.5,400])",
  "moveTo([240.5,0])",
  "lineTo([240.5,400])",
  "moveTo([252.5,0])",
  "lineTo([252.5,400])",
  "moveTo([264.5,0])",
  "lineTo([264.5,400])",
  "moveTo([276.5,0])",
  "lineTo([276.5,400])",
  "moveTo([288.5,0])",
  "lineTo([288.5,400])",
  "moveTo([300.5,0])",
  "lineTo([300.5,400])",
  "moveTo([312.5,0])",
  "lineTo([312.5,400])",
  "moveTo([324.5,0])",
  "lineTo([324.5,400])",
  "moveTo([336.5,0])",
  "lineTo([336.5,400])",
  "moveTo([348.5,0])",
  "lineTo([348.5,400])",
  "moveTo([360.5,0])",
  "lineTo([360.5,400])",
  "moveTo([372.5,0])",
  "lineTo([372.5,400])",
  "moveTo([384.5,0])",
  "lineTo([384.5,400])",
  "moveTo([396.5,0])",
  "lineTo([396.5,400])",
  "moveTo([408.5,0])",
  "lineTo([408.5,400])",
  "moveTo([420.5,0])",
  "lineTo([420.5,400])",
  "moveTo([432.5,0])",
  "lineTo([432.5,400])",
  "moveTo([444.5,0])",
  "lineTo([444.5,400])",
  "moveTo([456.5,0])",
  "lineTo([456.5,400])",
  "moveTo([468.5,0])",
  "lineTo([468.5,400])",
  "moveTo([480.5,0])",
  "lineTo([480.5,400])",
  "moveTo([492.5,0])",
  "lineTo([492.5,400])",
  "moveTo([504.5,0])",
  "lineTo([504.5,400])",
  "moveTo([516.5,0])",
  "lineTo([516.5,400])",
  "moveTo([528.5,0])",
  "lineTo([528.5,400])",
  "moveTo([540.5,0])",
  "lineTo([540.5,400])",
  "moveTo([552.5,0])",
  "lineTo([552.5,400])",
  "moveTo([564.5,0])",
  "lineTo([564.5,400])",
  "moveTo([576.5,0])",
  "lineTo([576.5,400])",
  "moveTo([588.5,0])",
  "lineTo([588.5,400])",
  "moveTo([600.5,0])",
  "lineTo([600.5,400])",
  "moveTo([612.5,0])",
  "lineTo([612.5,400])",
  "moveTo([624.5,0])",
  "lineTo([624.5,400])",
  "moveTo([636.5,0])",
  "lineTo([636.5,400])",
  "moveTo([648.5,0])",
  "lineTo([648.5,400])",
  "moveTo([660.5,0])",
  "lineTo([660.5,400])",
  "moveTo([672.5,0])",
  "lineTo([672.5,400])",
  "moveTo([684.5,0])",
  "lineTo([684.5,400])",
  "moveTo([696.5,0])",
  "lineTo([696.5,400])",
  "moveTo([708.5,0])",
  "lineTo([708.5,400])",
  "moveTo([720.5,0])",
  "lineTo([720.5,400])",
  "moveTo([732.5,0])",
  "lineTo([732.5,400])",
  "moveTo([744.5,0])",
  "lineTo([744.5,400])",
  "moveTo([756.5,0])",
  "lineTo([756.5,400])",
  "moveTo([768.5,0])",
  "lineTo([768.5,400])",
  "moveTo([780.5,0])",
  "lineTo([780.5,400])",
  "moveTo([792.5,0])",
  "lineTo([792.5,400])",
  "moveTo([804.5,0])",
  "lineTo([804.5,400])",
  "moveTo([60.5,0])",
  "lineTo([60.5,400])",
  "moveTo([432.5,0])",
  "lineTo([432.5,400])",
  "moveTo([768.5,0])",
  "lineTo([768.5,400])",
  "moveTo([60.5,0])",
  "lineTo([60.5,400])",
  "stroke([])",
  "strokeStyle=#333",
  "lineWidth=1",
  "setLineDash([[4,3]])",
  "beginPath([])",
  "moveTo([72,82])",
  "lineTo([60,82])",
  "lineTo([60,110])",
  "lineTo([72,110])",
  "moveTo([120,138])",
  "lineTo([132,138])",
  "lineTo([132,278])",
  "lineTo([113,278])",
  "stroke([])",
  "setLineDash([[]])",
  "lineWidth=2",
  "beginPath([])",
  "moveTo([120,54])",
  "lineTo([132,54])",
  "lineTo([132,82])",
  "lineTo([72,82])",
  "moveTo([120,110])",
  "lineTo([132,110])",
  "lineTo([132,138])",
  "lineTo([120,138])",
  "stroke([])",
  "lineWidth=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,45,48,18])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#f00",
  "fillRect([72,73,48,18])",
  "globalAlpha=1",
  "strokeStyle=#fff",
  "lineWidth=1.5",
  "setLineDash([[]])",
  "strokeRect([72.75,73.75,46.5,16.5])",
  "setLineDash([[]])",
  "globalAlpha=1",
  "fillStyle=#fa0",
  "fillRect([72,101,48,18])",
  "globalAlpha=1",
  "strokeStyle=#fff",
  "lineWidth=1.5",
  "setLineDash([[3,2]])",
  "strokeRect([72.75,101.75,46.5,16.5])",
  "setLineDash([[]])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,129,48,18])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,157,48,18])",
  "globalAlpha=1",
  "fillStyle=#333",
  "beginPath([])",
  "moveTo([68.5,152])",
  "lineTo([75.5,152])",
  "lineTo([72,157])",
  "fill([])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,185,48,18])",
  "globalAlpha=1",
  "fillStyle=#fa0",
  "beginPath([])",
  "moveTo([73,193])",
  "lineTo([79,193])",
  "lineTo([76,186])",
  "fill([])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([73,193])",
  "lineTo([79,193])",
  "lineTo([76,186])",
  "lineTo([73,193])",
  "stroke([])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,213,48,18])",
  "globalAlpha=1",
  "fillStyle=#fa0",
  "fillRect([95,207,5,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([95.5,207.5,4,4])",
  "fillStyle=#fa0",
  "fillRect([93,205,5,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([93.5,205.5,4,4])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,241,48,18])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "beginPath([])",
  "moveTo([120,271])",
  "lineTo([127,278])",
  "lineTo([120,285])",
  "lineTo([113,278])",
  "fill([])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,297,48,18])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,325,48,18])",
  "globalAlpha=1",
  "font=11px system-ui, -apple-system, 'Segoe UI', sans-serif",
  "textBaseline=middle",
  "textAlign=left",
  "fillStyle=#fff",
  "fillText(["A100 E…",75,54])",
  "fillStyle=#fff",
  "fillText(["A110 P…",75,82])",
  "fillStyle=#000",
  "fillText(["A120 S…",75,110])",
  "fillStyle=#fff",
  "fillText(["A130 C…",75,138])",
  "fillStyle=#fff",
  "fillText(["A140 F…",75,166])",
  "fillStyle=#fff",
  "fillText(["A150 M…",75,194])",
  "fillStyle=#fff",
  "fillText(["A160 R…",75,222])",
  "fillStyle=#fff",
  "fillText(["A170 C…",75,250])",
  "fillStyle=#eee",
  "fillText(["M1 Handover",131,278])",
  "fillStyle=#fff",
  "fillText(["LOE Su…",75,306])",
  "fillStyle=#fff",
  "fillText(["Substr…",75,334])",
]
`;

exports[`paintScene — whole-scene golden (ADR-0078 S1) > emits a stable ordered call log for the maximal scene 1`] = `
[
  "setTransform([1,0,0,1,0,0])",
  "clearRect([0,0,800,400])",
  "fillStyle=#111111",
  "fillRect([0,0,60,400])",
  "fillRect([432,0,336,400])",
  "fillStyle=#222",
  "fillRect([12,0,12,400])",
  "fillRect([84,0,12,400])",
  "fillRect([96,0,12,400])",
  "fillRect([168,0,12,400])",
  "fillRect([180,0,12,400])",
  "fillRect([252,0,12,400])",
  "fillRect([264,0,12,400])",
  "fillRect([336,0,12,400])",
  "fillRect([348,0,12,400])",
  "fillRect([420,0,12,400])",
  "fillRect([432,0,12,400])",
  "fillRect([504,0,12,400])",
  "fillRect([516,0,12,400])",
  "fillRect([588,0,12,400])",
  "fillRect([600,0,12,400])",
  "fillRect([672,0,12,400])",
  "fillRect([684,0,12,400])",
  "fillRect([756,0,12,400])",
  "fillRect([768,0,12,400])",
  "strokeStyle=#3a3a3a",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([0.5,0])",
  "lineTo([0.5,400])",
  "moveTo([12.5,0])",
  "lineTo([12.5,400])",
  "moveTo([24.5,0])",
  "lineTo([24.5,400])",
  "moveTo([36.5,0])",
  "lineTo([36.5,400])",
  "moveTo([48.5,0])",
  "lineTo([48.5,400])",
  "moveTo([60.5,0])",
  "lineTo([60.5,400])",
  "moveTo([72.5,0])",
  "lineTo([72.5,400])",
  "moveTo([84.5,0])",
  "lineTo([84.5,400])",
  "moveTo([96.5,0])",
  "lineTo([96.5,400])",
  "moveTo([108.5,0])",
  "lineTo([108.5,400])",
  "moveTo([120.5,0])",
  "lineTo([120.5,400])",
  "moveTo([132.5,0])",
  "lineTo([132.5,400])",
  "moveTo([144.5,0])",
  "lineTo([144.5,400])",
  "moveTo([156.5,0])",
  "lineTo([156.5,400])",
  "moveTo([168.5,0])",
  "lineTo([168.5,400])",
  "moveTo([180.5,0])",
  "lineTo([180.5,400])",
  "moveTo([192.5,0])",
  "lineTo([192.5,400])",
  "moveTo([204.5,0])",
  "lineTo([204.5,400])",
  "moveTo([216.5,0])",
  "lineTo([216.5,400])",
  "moveTo([228.5,0])",
  "lineTo([228.5,400])",
  "moveTo([240.5,0])",
  "lineTo([240.5,400])",
  "moveTo([252.5,0])",
  "lineTo([252.5,400])",
  "moveTo([264.5,0])",
  "lineTo([264.5,400])",
  "moveTo([276.5,0])",
  "lineTo([276.5,400])",
  "moveTo([288.5,0])",
  "lineTo([288.5,400])",
  "moveTo([300.5,0])",
  "lineTo([300.5,400])",
  "moveTo([312.5,0])",
  "lineTo([312.5,400])",
  "moveTo([324.5,0])",
  "lineTo([324.5,400])",
  "moveTo([336.5,0])",
  "lineTo([336.5,400])",
  "moveTo([348.5,0])",
  "lineTo([348.5,400])",
  "moveTo([360.5,0])",
  "lineTo([360.5,400])",
  "moveTo([372.5,0])",
  "lineTo([372.5,400])",
  "moveTo([384.5,0])",
  "lineTo([384.5,400])",
  "moveTo([396.5,0])",
  "lineTo([396.5,400])",
  "moveTo([408.5,0])",
  "lineTo([408.5,400])",
  "moveTo([420.5,0])",
  "lineTo([420.5,400])",
  "moveTo([432.5,0])",
  "lineTo([432.5,400])",
  "moveTo([444.5,0])",
  "lineTo([444.5,400])",
  "moveTo([456.5,0])",
  "lineTo([456.5,400])",
  "moveTo([468.5,0])",
  "lineTo([468.5,400])",
  "moveTo([480.5,0])",
  "lineTo([480.5,400])",
  "moveTo([492.5,0])",
  "lineTo([492.5,400])",
  "moveTo([504.5,0])",
  "lineTo([504.5,400])",
  "moveTo([516.5,0])",
  "lineTo([516.5,400])",
  "moveTo([528.5,0])",
  "lineTo([528.5,400])",
  "moveTo([540.5,0])",
  "lineTo([540.5,400])",
  "moveTo([552.5,0])",
  "lineTo([552.5,400])",
  "moveTo([564.5,0])",
  "lineTo([564.5,400])",
  "moveTo([576.5,0])",
  "lineTo([576.5,400])",
  "moveTo([588.5,0])",
  "lineTo([588.5,400])",
  "moveTo([600.5,0])",
  "lineTo([600.5,400])",
  "moveTo([612.5,0])",
  "lineTo([612.5,400])",
  "moveTo([624.5,0])",
  "lineTo([624.5,400])",
  "moveTo([636.5,0])",
  "lineTo([636.5,400])",
  "moveTo([648.5,0])",
  "lineTo([648.5,400])",
  "moveTo([660.5,0])",
  "lineTo([660.5,400])",
  "moveTo([672.5,0])",
  "lineTo([672.5,400])",
  "moveTo([684.5,0])",
  "lineTo([684.5,400])",
  "moveTo([696.5,0])",
  "lineTo([696.5,400])",
  "moveTo([708.5,0])",
  "lineTo([708.5,400])",
  "moveTo([720.5,0])",
  "lineTo([720.5,400])",
  "moveTo([732.5,0])",
  "lineTo([732.5,400])",
  "moveTo([744.5,0])",
  "lineTo([744.5,400])",
  "moveTo([756.5,0])",
  "lineTo([756.5,400])",
  "moveTo([768.5,0])",
  "lineTo([768.5,400])",
  "moveTo([780.5,0])",
  "lineTo([780.5,400])",
  "moveTo([792.5,0])",
  "lineTo([792.5,400])",
  "moveTo([804.5,0])",
  "lineTo([804.5,400])",
  "stroke([])",
  "strokeStyle=#111111",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([60.5,0])",
  "lineTo([60.5,400])",
  "moveTo([432.5,0])",
  "lineTo([432.5,400])",
  "moveTo([768.5,0])",
  "lineTo([768.5,400])",
  "stroke([])",
  "strokeStyle=#565656",
  "lineWidth=2",
  "beginPath([])",
  "moveTo([60,0])",
  "lineTo([60,400])",
  "stroke([])",
  "strokeStyle=#333",
  "lineWidth=1",
  "setLineDash([[4,3]])",
  "beginPath([])",
  "moveTo([120,139.5])",
  "lineTo([133.5,139.5])",
  "lineTo([133.5,278])",
  "lineTo([113,278])",
  "stroke([])",
  "fillStyle=#333",
  "beginPath([])",
  "moveTo([113,278])",
  "lineTo([121,275])",
  "lineTo([121,281])",
  "lineTo([113,278])",
  "fill([])",
  "setLineDash([[]])",
  "lineWidth=2",
  "beginPath([])",
  "stroke([])",
  "lineWidth=1",
  "strokeStyle=#0af",
  "lineWidth=2",
  "setLineDash([[4,3]])",
  "beginPath([])",
  "moveTo([120,83.5])",
  "lineTo([58.5,83.5])",
  "lineTo([58.5,110])",
  "lineTo([72,110])",
  "stroke([])",
  "fillStyle=#0af",
  "beginPath([])",
  "moveTo([72,110])",
  "lineTo([64,113])",
  "lineTo([64,107])",
  "lineTo([72,110])",
  "fill([])",
  "setLineDash([[]])",
  "lineWidth=3",
  "beginPath([])",
  "moveTo([120,54])",
  "lineTo([132,54])",
  "lineTo([132,80.5])",
  "lineTo([72,80.5])",
  "moveTo([120,110])",
  "lineTo([132,110])",
  "lineTo([132,136.5])",
  "lineTo([84,136.5])",
  "stroke([])",
  "fillStyle=#0af",
  "beginPath([])",
  "moveTo([72,80.5])",
  "lineTo([80,77.5])",
  "lineTo([80,83.5])",
  "lineTo([72,80.5])",
  "moveTo([84,136.5])",
  "lineTo([92,133.5])",
  "lineTo([92,139.5])",
  "lineTo([84,136.5])",
  "fill([])",
  "lineWidth=1",
  "strokeStyle=#333",
  "strokeStyle=#333",
  "lineWidth=1",
  "setLineDash([[2,2]])",
  "strokeRect([84.5,73.5,59,17])",
  "setLineDash([[]])",
  "globalAlpha=0.18",
  "fillStyle=#44f",
  "fillRect([72,45,48,18])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([72.5,45.5,47,17])",
  "globalAlpha=1",
  "fillStyle=#f00",
  "fillRect([72,73,48,18])",
  "globalAlpha=1",
  "strokeStyle=#fff",
  "lineWidth=2",
  "setLineDash([[]])",
  "strokeRect([73,74,46,16])",
  "setLineDash([[]])",
  "globalAlpha=1",
  "fillStyle=#0c8",
  "fillRect([72,101,48,18])",
  "globalAlpha=1",
  "strokeStyle=#fff",
  "lineWidth=2",
  "setLineDash([[3,2]])",
  "strokeRect([73,102,46,16])",
  "setLineDash([[]])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,129,48,18])",
  "fillStyle=#fff",
  "fillRect([74,141,19.8,4])",
  "fillRect([93.3,141,1,4])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([72.5,129.5,47,17])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,157,48,18])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([72.5,157.5,47,17])",
  "fillStyle=#333",
  "beginPath([])",
  "moveTo([68.5,152])",
  "lineTo([75.5,152])",
  "lineTo([72,157])",
  "fill([])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([68.5,152])",
  "lineTo([75.5,152])",
  "lineTo([72,157])",
  "lineTo([68.5,152])",
  "stroke([])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,185,48,18])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([72.5,185.5,47,17])",
  "fillStyle=#fa0",
  "beginPath([])",
  "moveTo([73,193])",
  "lineTo([79,193])",
  "lineTo([76,186])",
  "fill([])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([73,193])",
  "lineTo([79,193])",
  "lineTo([76,186])",
  "lineTo([73,193])",
  "stroke([])",
  "globalAlpha=0.3",
  "fillStyle=#44f",
  "fillRect([72,213,48,18])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([72.5,213.5,47,17])",
  "fillStyle=#fa0",
  "fillRect([95,207,5,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([95.5,207.5,4,4])",
  "fillStyle=#fa0",
  "fillRect([93,205,5,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([93.5,205.5,4,4])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,241,48,18])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([72.5,241.5,47,17])",
  "fillStyle=#fa0",
  "fillRect([112,236,2,3])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([112.5,236.5,1,2])",
  "fillStyle=#fa0",
  "fillRect([115,234,2,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([115.5,234.5,1,4])",
  "fillStyle=#fa0",
  "fillRect([118,232,2,7])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([118.5,232.5,1,6])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "beginPath([])",
  "moveTo([120,271])",
  "lineTo([127,278])",
  "lineTo([120,285])",
  "lineTo([113,278])",
  "fill([])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "stroke([])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,297,48,18])",
  "fillRect([72,294,2,24])",
  "fillRect([118,294,2,24])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([72.5,297.5,47,17])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,325,48,18])",
  "fillRect([72,343,3,4])",
  "fillRect([117,343,3,4])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([72.5,325.5,47,17])",
  "strokeStyle=#333",
  "lineWidth=1",
  "setLineDash([[2,2]])",
  "beginPath([])",
  "moveTo([72,83.5])",
  "lineTo([120,83.5])",
  "moveTo([120,136.5])",
  "lineTo([84,136.5])",
  "stroke([])",
  "setLineDash([[]])",
  "fillStyle=#fff",
  "fillRect([80.5,133,7,7])",
  "strokeStyle=#0b0b0b",
  "lineWidth=1.5",
  "strokeRect([80.5,133,7,7])",
  "lineWidth=1",
  "fillStyle=#fff",
  "fillRect([115,78.5,10,10])",
  "strokeStyle=#0b0b0b",
  "lineWidth=2",
  "strokeRect([115,78.5,10,10])",
  "lineWidth=1",
  "strokeStyle=#dd1",
  "lineWidth=2",
  "setLineDash([[]])",
  "beginPath([])",
  "moveTo([60.5,0])",
  "lineTo([60.5,400])",
  "stroke([])",
  "strokeStyle=#f00",
  "lineWidth=1.5",
  "setLineDash([[4,3]])",
  "beginPath([])",
  "moveTo([113.5,0])",
  "lineTo([113.5,400])",
  "stroke([])",
  "setLineDash([[]])",
  "font=11px system-ui, -apple-system, 'Segoe UI', sans-serif",
  "measureText(["Today"])",
  "fillStyle=#f00",
  "fillRect([95.5,24,36,16])",
  "fillStyle=#fff",
  "textBaseline=middle",
  "textAlign=left",
  "fillText(["Today",98.5,32])",
  "font=11px system-ui, -apple-system, 'Segoe UI', sans-serif",
  "measureText(["Data date"])",
  "fillStyle=#dd1",
  "fillRect([30.5,44,60,16])",
  "fillStyle=#dd2",
  "textBaseline=middle",
  "textAlign=left",
  "fillText(["Data date",33.5,52])",
  "font=11px system-ui, -apple-system, 'Segoe UI', sans-serif",
  "textBaseline=middle",
  "textAlign=left",
  "fillStyle=#fff",
  "fillText(["A100…",77,54])",
  "fillStyle=#fff",
  "fillText(["A110…",77,82])",
  "fillStyle=#012",
  "fillText(["A120…",77,110])",
  "fillStyle=#fff",
  "fillText(["A130…",77,138])",
  "fillStyle=#fff",
  "fillText(["A140…",77,166])",
  "fillStyle=#fff",
  "fillText(["A150…",77,194])",
  "fillStyle=#fff",
  "fillText(["A160…",77,222])",
  "fillStyle=#fff",
  "fillText(["A170…",77,250])",
  "fillStyle=#eee",
  "fillText(["M1 Handover",131,278])",
  "fillStyle=#fff",
  "fillText(["LOE S…",77,306])",
  "fillStyle=#fff",
  "fillText(["Subst…",77,334])",
  "strokeStyle=#0af",
  "lineWidth=2",
  "strokeRect([70,71,52,22])",
  "fillStyle=#0af",
  "fillRect([69,79,6,6])",
  "fillRect([117,79,6,6])",
]
`;

exports[`paintScene — whole-scene golden (ADR-0078 S1) > holds its per-method call totals 1`] = `
{
  "beginPath": 18,
  "clearRect": 1,
  "fill": 6,
  "fillRect": 48,
  "fillText": 13,
  "lineTo": 113,
  "moveTo": 89,
  "setLineDash": 15,
  "setTransform": 1,
  "stroke": 13,
  "strokeRect": 19,
}
`;
